refactor: Math.clamp instead of nested max/min
Java 21's Math.clamp replaces the equivalent Math.max(0, Math.min(...))
expression in RetryPolicy.delayBefore.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>